lang/macro/tests/ui/fail/31-invalid-meta-info-key-2.stderr
error: unknown parameter: invalid_key
 --> $DIR/31-invalid-meta-info-key-2.rs:3:34
  |
3 | #[liquid::interface(name = auto, invalid_key = "whatever")]
  |                                  ^^^^^^^^^^^
